# rae_text

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
examples/: text.rs  text_rendering.rs
src/: font.rs  text_renderer.rs
src/shaders/glsl/: text.vert
