[package]
name = "rae_text"
version = "0.1.0"
authors = ["Davide Corradi <davide.corradi.dev@gmail.com>"]
edition = "2018"

[dependencies]
freetype-rs = { version = "0.26" }
harfbuzz_rs = { version = "1.2" }
rae_gfx = { git = "https://github.com/DavideCorradiDev/rae_gfx.git", tag = "v0.1.1" }
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.4" }
